--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -21,7 +21,7 @@ jobs:
       ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
     runs-on: ubuntu-latest
     
-    environment: production
+    environment: prod
  
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
    
