--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -39,10 +39,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
       
-    - name: Login to Azure
+    - name: 'Azure Login'
       uses: Azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        client-id: ${{ secrets.AZURE_AD_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     
     - uses: Azure/get-keyvault-secrets@v1
       with: 
