--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -40,11 +40,11 @@ jobs:
       uses: actions/checkout@v3
       
     - name: 'Azure Login'
-      uses: Azure/login@v1
-      with:
-        client-id: ${{ secrets.AZURE_AD_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      with: # Set Azure credentials secret as an input
+        credentials: ${{ secrets.AZURE_CREDENTIALS }}
+      env: # Or as an environment variable
+        credentials: ${{ secrets.AZURE_CREDENTIALS }}
+
     
     - uses: Azure/get-keyvault-secrets@v1
       with: 
