--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -40,11 +40,9 @@ jobs:
       uses: actions/checkout@v3
       
     - name: 'Azure Login'
-      with: # Set Azure credentials secret as an input
-        credentials: ${{ secrets.AZURE_CREDENTIALS }}
-      env: # Or as an environment variable
-        credentials: ${{ secrets.AZURE_CREDENTIALS }}
-
+      uses: Azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
     
     - uses: Azure/get-keyvault-secrets@v1
       with: 
