--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -16,7 +16,7 @@ jobs:
     if: github.repository == 'sapkotapratik/ncp-devops-2022'
 #     env:
 #       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-#       ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secrets }}
+#       ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
 #       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 #       ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
     runs-on: ubuntu-latest
