--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -47,14 +47,14 @@ jobs:
     - uses: Azure/get-keyvault-secrets@v1
       with: 
         keyvault: "github-certificate"
-        secrets: 'ga-secrets'
+        secrets: 'ga-secret'
       id: myGetSecretAction
       
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
         ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secrets }}
+        ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
       
