--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -14,11 +14,11 @@ jobs:
     #Checking if repository name is correct.
     
     if: github.repository == 'sapkotapratik/ncp-devops-2022'
-#     env:
-#       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-#       ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
-#       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-#       ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+    env:
+      ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
     runs-on: ubuntu-latest
     
     environment: prod
@@ -67,13 +67,15 @@ jobs:
       
     - name: Terraform Validate
       run: terraform validate
+      
     - name: terraform-plan
-      uses: dflook/terraform-plan@v1.25.0
-      with:
-        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
-        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+      run: terraform plan
+#       uses: dflook/terraform-plan@v1.25.0
+#       with:
+#         ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+#         ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
+#         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#         ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
       
 
     - name: Terraform Apply
