--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -51,12 +51,12 @@ jobs:
       id: myGetSecretAction
       
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-#       with:
-#         ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-#         ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
-#         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-#         ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+      uses: hashicorp/setup-terraform@v2
+      with:
+        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
       
       
     - name: Terraform Format
@@ -68,24 +68,17 @@ jobs:
     - name: Terraform Validate
       run: terraform validate
       
-    - uses: gogaille/review-terraform-plan@v2.3.0
-      id: terraform-plan
-      env:
-         ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-         ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
-         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-         ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
-      
+ 
 
       
-#     - name: terraform-plan
+    - name: terraform-plan
 #       run: terraform plan
-#       uses: dflook/terraform-plan@v1.25.0
-#       with:
-#         ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-#         ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
-#         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-#         ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+      uses: dflook/terraform-plan@v1.25.0
+      with:
+        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
       
 
     - name: Terraform Apply
