--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -83,3 +83,10 @@ jobs:
 
     - name: Terraform Apply
       run: terraform apply -auto-approve
+      continue-on-error: true
+      env:
+       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+       ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
+       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+       ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+      
