--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -40,9 +40,9 @@ jobs:
       uses: actions/checkout@v3
       
     - name: 'Azure Login using OIDC'
-      uses: Azure/login@v1
+      uses: azure/login@v1
       with:
-        client_id: ${{ secrets.secrets.AZURE_AD_CLIENT_ID }}
+        client-id: ${{ secrets.secrets.AZURE_AD_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         subscription-id: ${{ secrets.AZURE_AD_TENANT_ID }}
     
