--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -13,7 +13,7 @@ permissions:
       contents: read
 jobs: 
   deploy-infra:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
@@ -27,8 +27,8 @@ jobs:
     - name: 'Az CLI login'
       uses: azure/login@v1
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        client-id: ${{ secrets.AZURE_AD_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     # Run az commands to confirm sub access
