--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -5,6 +5,12 @@ on:
     branches:
     - main
   pull_request:
+  
+permissions:
+      id-token: write
+      issues: write
+      pull-requests: write
+      contents: read
  
 jobs:
   
