--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -58,35 +58,35 @@ jobs:
       run: |
         az account show
     
-#     - uses: Azure/get-keyvault-secrets@v1
-#       with: 
-#         keyvault: "github-certificate"
-#         secrets: 'ga-secret'
-#       id: myGetSecretAction
+    - uses: Azure/get-keyvault-secrets@v1
+      with: 
+        keyvault: "github-certificate"
+        secrets: 'ga-secret'
+      id: myGetSecretAction
       
-#     - name: Setup Terraform
-#       uses: hashicorp/setup-terraform@v2
-# #       with:
-# #         ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-# #         ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
-# #         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-# #         ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
+#       with:
+#          ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+#          ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
+#          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#          ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
       
       
-#     - name: Terraform Format
-#       run: terraform fmt
+    - name: Terraform Format
+      run: terraform fmt
 
-#     - name: Terraform Init
-#       run: terraform init
+    - name: Terraform Init
+      run: terraform init
       
-#     - name: Terraform Validate
-#       run: terraform validate
+    - name: Terraform Validate
+      run: terraform validate
       
  
 
       
-#     - name: terraform-plan
-#       run: terraform plan
+    - name: terraform-plan
+      run: terraform plan
 #       continue-on-error: true
 #       env:
 #        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
@@ -95,8 +95,8 @@ jobs:
 #        ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
   
 
-#     - name: Terraform Apply
-#       run: terraform apply -auto-approve
+    - name: Terraform Apply
+      run: terraform apply -auto-approve
 #       continue-on-error: true
 #       env:
 #        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
