--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -66,6 +66,7 @@ jobs:
       
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
+      
 #       with:
 #          ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
 #          ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
@@ -87,6 +88,11 @@ jobs:
       
     - name: terraform-plan
       run: terraform plan
+      continue-on-error: true
+      env:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 #       continue-on-error: true
 #       env:
 #        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
@@ -97,6 +103,11 @@ jobs:
 
     - name: Terraform Apply
       run: terraform apply -auto-approve
+      continue-on-error: true
+      env:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 #       continue-on-error: true
 #       env:
 #        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
