--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -58,11 +58,11 @@ jobs:
       run: |
         az account show
     
-    - uses: Azure/get-keyvault-secrets@v1
-      with: 
-        keyvault: "github-certificate"
-        secrets: 'ga-secret'
-      id: myGetSecretAction
+#     - uses: Azure/get-keyvault-secrets@v1
+#       with: 
+#         keyvault: "github-certificate"
+#         secrets: 'ga-secret'
+#       id: myGetSecretAction
       
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
@@ -91,8 +91,9 @@ jobs:
         ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      run: terraform plan
-      continue-on-error: true
+      run: terraform plan -no-color
+
+#       continue-on-error: true
 #       env:
         
 #         client-id: ${{ secrets.AZURE_CLIENT_ID }}
@@ -112,7 +113,7 @@ jobs:
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       run: terraform apply -auto-approve
-      continue-on-error: true
+#       continue-on-error: true
 #       env:
 #         client-id: ${{ secrets.AZURE_CLIENT_ID }}
 #         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
