--- a/.github/workflows/oidc.yml
+++ b/.github/workflows/oidc.yml
@@ -81,7 +81,14 @@ jobs:
       run: terraform init
       
     - name: Terraform Validate
-      run: terraform validate
+#       run: terraform validate
+#       if: success() || failure()
+      env:
+        ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      run: terraform validate -no-color
+
       
  
 
