--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,5 +17,8 @@ jobs:
            - environment: test
              runner: ubuntu-latest
            - environment: prod
-             runner: ubuntu-18.04
+             runner: windows-latest
+             
+    steps:
+      - uses: actions/checkout@v2
 
