--- a/.github/workflows/matrix_test.yml
+++ b/.github/workflows/matrix_test.yml
@@ -9,7 +9,7 @@ defaults:
 jobs:
   build:
     name:   Matrix Build
-#     runs-on: [ '${{ matrix.runner }}']
+    runs-on: [ '${{ matrix.runner }}']
     strategy:
       max-parallel: 1
       matrix:
