--- a/.github/workflows/rg.yml
+++ b/.github/workflows/rg.yml
@@ -1,98 +1,25 @@
-name: 'Azure RG Creation'
- 
+name: Azure Login and Run PowerShell Script
+
 on:
   push:
     branches:
-    - main
-  pull_request:
- 
+      - main  # Trigger this workflow on push to the main branch (adjust if needed)
+
 jobs:
-  
-  terraform:
-
-    name: 'Terraform'
-    #Checking if repository name is correct.
-    
-    if: github.repository == 'sapkotapratik/ncp-devops-2022'
-#     env:
-#       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-#       ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
-#       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-#       ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+  run_powershell:
     runs-on: ubuntu-latest
-    
-    environment: prod
- 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-   
-
-    defaults:
-      run:
-        shell: bash
- 
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-    
-      
- 
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-      
-    - name: 'Azure Login using OIDC'
-      uses: Azure/login@v1
+    - name: Login to Azure
+      uses: azure/login@v1
       with:
-        client-id: ${{ secrets.secrets.AZURE_AD_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        subscription-id: ${{ secrets.AZURE_AD_TENANT_ID }}
-        
-    - name: 'Run az commands'
-      run: |
-        az account show
-    
-    - uses: Azure/get-keyvault-secrets@v1
-      with: 
-        keyvault: "github-certificate"
-        secrets: 'ga-secret'
-      id: myGetSecretAction
-      
-#     - name: Setup Terraform
-#       uses: hashicorp/setup-terraform@v2
-# #       with:
-# #         ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-# #         ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
-# #         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-# #         ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
-      
-      
-#     - name: Terraform Format
-#       run: terraform fmt
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-#     - name: Terraform Init
-#       run: terraform init
-      
-#     - name: Terraform Validate
-#       run: terraform validate
-      
- 
+    - name: Install PowerShell
+      uses: actions/setup-powershell@v1
 
-      
-#     - name: terraform-plan
-#       run: terraform plan
-#       continue-on-error: true
-#       env:
-#        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-#        ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
-#        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-#        ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
-  
+    - name: Execute PowerShell script
+      run: pwsh -File ./generate_value.ps1
 
-#     - name: Terraform Apply
-#       run: terraform apply -auto-approve
-#       continue-on-error: true
-#       env:
-#        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-#        ARM_CLIENT_SECRET: ${{ steps.myGetSecretAction.outputs.ga-secret }}
-#        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-#        ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
-      
